Comments order legacy, order by ID fixed, css fixes
* Comments order as original QC, from older to newer, later will
    add a setting to choose
* Fix #82 body scrollbar always present
* Fix #81 treat ID field as int
* Notification pluralization error on 'others'
* Removed outline on focused and active buttons

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,11 +1,16 @@
 input:focus,
-a:focus {
+a:focus,
+button:focus,
+.btn:focus,
+.btn:focus:active,
+.btn:active {
     outline:none;
 }
 
 body {
     font-size:16px;
     padding-top:70px;
+    overflow-y:scroll;
 }
 
 .form-inline {
